[gd_scene format=3 uid="uid://d2pftei8tocpx"]

[ext_resource type="Script" uid="uid://bm5a6i3ntv5iu" path="res://_globals/gui/dev_menu/dev_menu.gd" id="1_2wt6a"]

[sub_resource type="Animation" id="Animation_bi30x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_eu61g"]
resource_name = "dev_menu_close"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_2wt6a"]
resource_name = "dev_menu_open"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.03333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eu61g"]
_data = {
&"RESET": SubResource("Animation_bi30x"),
&"dev_menu_close": SubResource("Animation_eu61g"),
&"dev_menu_open": SubResource("Animation_2wt6a")
}

[node name="DevMenu" type="CanvasLayer" unique_id=913570968]
layer = 50
script = ExtResource("1_2wt6a")

[node name="DevMenuPositioner" type="Control" parent="." unique_id=958617326]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
mouse_filter = 2

[node name="GridContainer" type="GridContainer" parent="DevMenuPositioner" unique_id=1969580136]
layout_mode = 1
offset_right = 212.0
offset_bottom = 50.0
focus_mode = 1
mouse_filter = 2
columns = 6

[node name="Button1" type="Button" parent="DevMenuPositioner/GridContainer" unique_id=1709774419]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
focus_mode = 1
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "Testtscn
+
Player"

[node name="Button2" type="Button" parent="DevMenuPositioner/GridContainer" unique_id=724433894]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
focus_mode = 1
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "Save
Options"

[node name="Button3" type="Button" parent="DevMenuPositioner/GridContainer" unique_id=1646047465]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
focus_mode = 1
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "Save
Slot1"

[node name="Button4" type="Button" parent="DevMenuPositioner/GridContainer" unique_id=1469592686]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
focus_mode = 1
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "Save
Slot2"

[node name="Button5" type="Button" parent="DevMenuPositioner/GridContainer" unique_id=486795730]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
focus_mode = 1
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "Load
Options"

[node name="Button6" type="Button" parent="DevMenuPositioner/GridContainer" unique_id=320286380]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
focus_mode = 1
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "Load
Save1"

[node name="Button7" type="Button" parent="DevMenuPositioner/GridContainer" unique_id=1338828106]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
focus_mode = 1
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "Load
Slot2"

[node name="Button8" type="Button" parent="DevMenuPositioner/GridContainer" unique_id=1114973133]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
focus_mode = 1
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "Poison
Test"

[node name="Button9" type="Button" parent="DevMenuPositioner/GridContainer" unique_id=877212581]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
focus_mode = 1
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "Battle
Notify"

[node name="Button10" type="Button" parent="DevMenuPositioner/GridContainer" unique_id=2141585065]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
focus_mode = 1
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "Remove
Enemies"

[node name="AnimationPlayer" type="AnimationPlayer" parent="DevMenuPositioner" unique_id=310902497]
unique_name_in_owner = true
libraries/ = SubResource("AnimationLibrary_eu61g")
